Bug 355333: [IMAP] Crash when moving or deleting messages [@nsImapProtocol::HandleMessageDownLoadLine] r+sr=bienvenu